fixed spacing

--- a/client/src/pages/Dashboard/modules/OpenPositionsTable/OpenPositionsTable.css
+++ b/client/src/pages/Dashboard/modules/OpenPositionsTable/OpenPositionsTable.css
@@ -19,4 +19,5 @@
 
 div.virtual-table-cell{
     text-align: center;
+    padding-top: 1rem;
 }
